# rust-radio-at86rf212

./: Cargo.toml  README.md  rpi_env.sh  rpi_setup.sh
src/: device.rs  lib.rs  regs.rs
tests/: main.rs
