[package]
name = "radio-at86rf212"
description = "Driver for the Atmel AT86RF212 Sub 1GHz ISM band radio IC"
version = "0.2.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
radio = "0.1.0"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dev-dependencies]
linux-embedded-hal = "0.2.2"
remote-hal = "0.5.0"
futures = "0.1.26"
tokio = { version="0.1.18" }
futures-macro-await = "0.2.1"
tokio-async-await = "0.1.6"
simplelog = "0.5.3"

[patch.crates-io]
remote-hal = { path = "../rust-remote-hal" }
