[package]
name = "radio-at86rf212"
description = "Driver for the Atmel AT86RF212 Sub 1GHz ISM band radio IC"
version = "0.2.1"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "MPL-2.0"

[dependencies]
radio = "0.2.0"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[dev-dependencies]
linux-embedded-hal = "0.2.2"
